--- a/notebook/train.ipynb
+++ b/notebook/train.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4b035f9a",
+   "id": "af12996e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc3b215",
+   "id": "ae72e97a",
    "metadata": {},
    "source": [
     "# Train"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 404,
-   "id": "ba08d0d5",
+   "id": "9598fa6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 425,
-   "id": "33204f9e",
+   "id": "6ff246d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "id": "a64b9130",
+   "id": "b42c6047",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 407,
-   "id": "cea9782b",
+   "id": "8dde038c",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 419,
-   "id": "7fc4402c",
+   "id": "06735151",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "374023c7",
+   "id": "6af61209",
    "metadata": {},
    "source": [
     "# Test"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 409,
-   "id": "25cdd45c",
+   "id": "3412e8cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 426,
-   "id": "71b1399e",
+   "id": "2caafd11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "id": "2340f7c3",
+   "id": "9c325a56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "id": "681bc2b8",
+   "id": "5c99bab6",
    "metadata": {},
    "outputs": [
     {
@@ -273,18 +273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
-   "id": "55d15064",
+   "execution_count": 427,
+   "id": "e5290604",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = predict_with_threshold(model, pre_process(test_dataset[\"text\"]))"
+    "import time\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "predictions = predict_with_threshold(model, pre_process(test_dataset[\"text\"]))\n",
+    "\n",
+    "print(f\"\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 414,
-   "id": "df84a141",
+   "id": "0c3a5b16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 415,
-   "id": "36903496",
+   "id": "3454a383",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39eb20f",
+   "id": "ca60d7fe",
    "metadata": {},
    "source": [
     "# Check"
@@ -330,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 423,
-   "id": "380c2867",
+   "id": "46e57d36",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 422,
-   "id": "dadd8099",
+   "id": "018ebff1",
    "metadata": {
     "scrolled": true
    },
@@ -1141,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a686f10",
+   "id": "a39b16f7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1149,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35e9e53a",
+   "id": "3e45f15c",
    "metadata": {},
    "outputs": [],
    "source": []
