--- a/notebook/train.ipynb
+++ b/notebook/train.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "af12996e",
+   "id": "c31973af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae72e97a",
+   "id": "9d149be6",
    "metadata": {},
    "source": [
     "# Train"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 404,
-   "id": "9598fa6a",
+   "id": "2dc0b251",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 425,
-   "id": "6ff246d3",
+   "id": "d26315d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "id": "b42c6047",
+   "id": "c70acea8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 407,
-   "id": "8dde038c",
+   "id": "49c90160",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 419,
-   "id": "06735151",
+   "id": "0205e191",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6af61209",
+   "id": "fc4ece60",
    "metadata": {},
    "source": [
     "# Test"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 409,
-   "id": "3412e8cb",
+   "id": "a9166a25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 426,
-   "id": "2caafd11",
+   "id": "2d3cb10a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "id": "9c325a56",
+   "id": "1174f295",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "id": "5c99bab6",
+   "id": "25ba10a4",
    "metadata": {},
    "outputs": [
     {
@@ -273,10 +273,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
-   "id": "e5290604",
+   "execution_count": 428,
+   "id": "7f56362c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time 2.980286121368408\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -284,13 +292,13 @@
     "\n",
     "predictions = predict_with_threshold(model, pre_process(test_dataset[\"text\"]))\n",
     "\n",
-    "print(f\"\")"
+    "print(f\"time { time.time() - start_time}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 414,
-   "id": "0c3a5b16",
+   "id": "b7e8888a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 415,
-   "id": "3454a383",
+   "id": "2eb57ab3",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca60d7fe",
+   "id": "34ac3522",
    "metadata": {},
    "source": [
     "# Check"
@@ -336,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 423,
-   "id": "46e57d36",
+   "id": "49c0dd74",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 422,
-   "id": "018ebff1",
+   "id": "dbad6c26",
    "metadata": {
     "scrolled": true
    },
@@ -1147,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a39b16f7",
+   "id": "c4c0e887",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1155,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e45f15c",
+   "id": "c785b0ee",
    "metadata": {},
    "outputs": [],
    "source": []
