--- a/notebook/create_datasets.ipynb
+++ b/notebook/create_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e004081c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "40e3c8f1",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "05a75b46",
    "metadata": {},
    "outputs": [
@@ -220,13 +220,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset parquet (/home/ran/.cache/huggingface/datasets/ranWang___parquet/ranWang--test_paper_textClassifier-7f659cfaa72da6d9/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n"
+      "Found cached dataset parquet (/home/ran/.cache/huggingface/datasets/ranWang___parquet/ranWang--test_paper_textClassifier-c89de31317ad5101/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c21ec2eda8b0450cb9765c39fc103791",
+       "model_id": "d958491c9e0540ad8c8c8a37da56fafd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "2104fd3a",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "51929741",
    "metadata": {},
    "outputs": [
@@ -262,64 +262,12 @@
      "data": {
       "text/plain": [
        "Dataset({\n",
-       "    features: ['text', 'label'],\n",
-       "    num_rows: 2779\n",
-       "})"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2fc32393",
-   "metadata": {},
-   "source": [
-    "# 因为原先数据集中没有保存文件地址，现在使得新增的数据中可以添加文件地址(这个文件地址仅用于自己debug使用)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "a07172bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "empty_column_data = [''] * len(train_dataset['label'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "f39fcf4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset = train_dataset.add_column('file_path', empty_column_data) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "945c92f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
        "    features: ['text', 'label', 'file_path'],\n",
-       "    num_rows: 2779\n",
+       "    num_rows: 9536\n",
        "})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +278,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
+   "id": "d4dfa9a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_file_name = {row[\"file_path\"].split(\"/\")[-1] for row in train_dataset}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "b095d989",
    "metadata": {},
    "outputs": [
@@ -338,7 +296,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 5629/5629 [06:14<00:00, 15.04it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████| 5644/5644 [00:01<00:00, 4920.52it/s]\n"
      ]
     }
    ],
@@ -353,11 +311,16 @@
     "column = {\"text\":[], \"label\":[], \"file_path\": []}\n",
     "for file_path in tqdm(list(counterexamples)):\n",
     "    _, ext = os.path.splitext(file_path)\n",
+    "    file_name = str(file_path).split(\"/\")[-1]\n",
+    "    \n",
+    "    if file_name in all_file_name:\n",
+    "        continue\n",
+    "        \n",
     "    try:\n",
     "        text = extract_text(str(file_path), ext)\n",
     "    except:\n",
     "        continue\n",
-    "        \n",
+    "    \n",
     "    column[\"text\"].append(text)\n",
     "    column[\"label\"].append(0)\n",
     "    column[\"file_path\"].append(str(file_path))"
@@ -365,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "34e7e0af",
    "metadata": {},
    "outputs": [
@@ -373,7 +336,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1128/1128 [01:13<00:00, 15.28it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1795/1795 [00:31<00:00, 56.50it/s]\n"
      ]
     }
    ],
@@ -384,6 +347,11 @@
     "\n",
     "for file_path in tqdm(list(counterexamples)):\n",
     "    _, ext = os.path.splitext(file_path)\n",
+    "    file_name = str(file_path).split(\"/\")[-1]\n",
+    "    \n",
+    "    if file_name in all_file_name:\n",
+    "        continue\n",
+    "        \n",
     "    try:\n",
     "        text = extract_text(str(file_path), ext)\n",
     "    except:\n",
@@ -396,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "049e8d67",
    "metadata": {},
    "outputs": [],
@@ -406,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "dde5ada5",
    "metadata": {},
    "outputs": [
@@ -415,11 +383,11 @@
       "text/plain": [
        "Dataset({\n",
        "    features: ['text', 'label', 'file_path'],\n",
-       "    num_rows: 9536\n",
+       "    num_rows: 10191\n",
        "})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "dd5a18ab",
    "metadata": {},
    "outputs": [],
@@ -440,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "33dd291f",
    "metadata": {},
    "outputs": [
@@ -449,17 +417,17 @@
       "text/plain": [
        "DatasetDict({\n",
        "    test: Dataset({\n",
-       "        features: ['text', 'label'],\n",
+       "        features: ['text', 'label', 'file_path'],\n",
        "        num_rows: 387\n",
        "    })\n",
        "    train: Dataset({\n",
        "        features: ['text', 'label', 'file_path'],\n",
-       "        num_rows: 9536\n",
+       "        num_rows: 10191\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,19 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d6b159ed",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "datadict[\"test\"] = datadict[\"test\"].add_column('file_path', [''] * len(datadict[\"test\"]['label'])) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "cc61d5f8",
    "metadata": {},
    "outputs": [
@@ -508,7 +464,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Saving the dataset (0/1 shards):   0%|          | 0/9536 [00:00<?, ? examples/s]"
+       "Saving the dataset (0/1 shards):   0%|          | 0/10191 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
