prefect md file

--- a/notebook/validation_results.ipynb
+++ b/notebook/validation_results.ipynb
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "ce5749fe",
+   "id": "8d487468",
    "metadata": {},
    "outputs": [
     {
@@ -61,15 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 212,
    "id": "dce10249",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# keywords可以抽象理解成路径，如 \"/题库\"\n",
-    "def query_file_total_by_keywords(all_file, keywords, uninclude_keywords=[]):\n",
+    "def query_file_total_by_keywords(all_file, keywords: list|set, uninclude_keywords: list|set = []):\n",
+    "    # keywords于uninclude_keywords也可以抽象理解成路径，如 \"/题库\"\n",
+    "    # keywords: 必须全部出现在\"file_path\"中，才会被提取\n",
+    "    # uninclude_keywords: 只要出现一个，就不会被提取\n",
+    "    \n",
     "    total = 0\n",
     "    all_file_path = []\n",
     "    for row in all_file:\n",
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b7c1613",
+   "id": "b222434e",
    "metadata": {},
    "source": [
     "# 检查\"题库\"文件夹"
@@ -98,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fff1334",
+   "id": "0869e9ab",
    "metadata": {},
    "source": [
     "# 由于\"学前教辅资料\"占比比较多，所以优先查看"
@@ -107,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "60cda3c8",
+   "id": "a2f54840",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "cebb180b",
+   "id": "20ed9274",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "e74418da",
+   "id": "9ea96ca9",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "4238e7f4",
+   "id": "9983a1c9",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "8471004c",
+   "id": "41219ecf",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce0f9de9",
+   "id": "2748fcac",
    "metadata": {},
    "source": [
     "# 从文件名推测"
@@ -230,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "fbe9d088",
+   "id": "025f6cf1",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "767d8870",
+   "id": "4760f1c1",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "363253a1",
+   "id": "c6670520",
    "metadata": {
     "scrolled": true
    },
@@ -805,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6681458",
+   "id": "702cea26",
    "metadata": {},
    "source": [
     "# 在全部的范围中使用文件名推测"
@@ -814,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "cf2355cd",
+   "id": "f6510254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8d82573",
+   "id": "727493cd",
    "metadata": {},
    "source": [
     "# 寻找假阴性"
@@ -848,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "131a61eb",
+   "id": "a4685b27",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "d4106fad",
+   "id": "1adfb37c",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "5bb58be5",
+   "id": "692c3af5",
    "metadata": {
     "scrolled": true
    },
@@ -1693,7 +1696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1d77032",
+   "id": "f1e33a93",
    "metadata": {},
    "source": [
     "# 寻找假阳性"
@@ -1702,7 +1705,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "e37339f9",
+   "id": "1d7e43ec",
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "2f20ca55",
+   "id": "b9b9958e",
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "27cb101b",
+   "id": "ba0b05f9",
    "metadata": {
     "scrolled": false
    },
@@ -2357,7 +2360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c02bc54a",
+   "id": "8567550b",
    "metadata": {},
    "outputs": [],
    "source": []
