final version train

--- a/notebook/create_datasets.ipynb
+++ b/notebook/create_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "e004081c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 73,
    "id": "40e3c8f1",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "id": "05a75b46",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d958491c9e0540ad8c8c8a37da56fafd",
+       "model_id": "0adf5bf432af4c67b42dba50048e4106",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,12 +239,13 @@
     }
    ],
    "source": [
+    "# 在这之前的时间，新增了一列\"file_path\"\n",
     "datadict = datasets.load_dataset(\"ranWang/test_paper_textClassifier\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "id": "2104fd3a",
    "metadata": {},
    "outputs": [],
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
    "id": "51929741",
    "metadata": {},
    "outputs": [
@@ -267,7 +268,7 @@
        "})"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 77,
    "id": "d4dfa9a6",
    "metadata": {},
    "outputs": [],
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 78,
    "id": "b095d989",
    "metadata": {},
    "outputs": [
@@ -296,7 +297,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████| 5644/5644 [00:01<00:00, 4920.52it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████| 7213/7213 [00:16<00:00, 430.00it/s]\n"
      ]
     }
    ],
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 79,
    "id": "34e7e0af",
    "metadata": {},
    "outputs": [
@@ -336,7 +337,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1795/1795 [00:31<00:00, 56.50it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1795/1795 [00:31<00:00, 57.48it/s]\n"
      ]
     }
    ],
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "id": "049e8d67",
    "metadata": {},
    "outputs": [],
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "id": "dde5ada5",
    "metadata": {},
    "outputs": [
@@ -383,11 +384,11 @@
       "text/plain": [
        "Dataset({\n",
        "    features: ['text', 'label', 'file_path'],\n",
-       "    num_rows: 10191\n",
+       "    num_rows: 11586\n",
        "})"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "id": "dd5a18ab",
    "metadata": {},
    "outputs": [],
@@ -408,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 83,
    "id": "33dd291f",
    "metadata": {},
    "outputs": [
@@ -422,12 +423,12 @@
        "    })\n",
        "    train: Dataset({\n",
        "        features: ['text', 'label', 'file_path'],\n",
-       "        num_rows: 10191\n",
+       "        num_rows: 11586\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 84,
    "id": "cc61d5f8",
    "metadata": {},
    "outputs": [
@@ -464,7 +465,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Saving the dataset (0/1 shards):   0%|          | 0/10191 [00:00<?, ? examples/s]"
+       "Saving the dataset (0/1 shards):   0%|          | 0/11586 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
