--- a/notebook/validation_results.ipynb
+++ b/notebook/validation_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 298,
    "id": "b5cbd522",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "\n",
     "all_file = []\n",
     "\n",
-    "with open(\"./move_log.log\", \"r\") as f:\n",
+    "with open(\"../move_log.log\", \"r\") as f:\n",
     "    for line in f:\n",
     "        [predict, probabilities, file_path] = line.split(\" \", 2)\n",
     "        \n",
@@ -30,17 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 299,
    "id": "8d487468",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "60241"
+       "7151"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 301,
+   "id": "3c8d521c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3244"
+      ]
+     },
+     "execution_count": 301,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(positive_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
    "id": "8ccf2f83",
    "metadata": {},
    "outputs": [],
@@ -61,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 292,
    "id": "dce10249",
    "metadata": {
     "scrolled": true
@@ -109,17 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 300,
    "id": "a2f54840",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8284"
+       "7151"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 294,
    "id": "20ed9274",
    "metadata": {},
    "outputs": [
@@ -142,7 +163,7 @@
        "3843"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,17 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 295,
    "id": "9ea96ca9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4639063254466441"
+       "0.5980392156862745"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,17 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 296,
    "id": "9983a1c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3911"
+       "2552"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,21 +219,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 297,
    "id": "41219ecf",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['./classifier/题库/数学/小学/其他/教辅资料库 小初高（合集）/学前教辅资料超级大汇总/幼儿园中班教案1760套/幼儿园中班亲子活动合集/亲子游戏：钓鱼游戏.doc',\n",
-       " './classifier/题库/数学/小学/其他/教辅资料库 小初高（合集）/学前教辅资料超级大汇总/幼儿园中班教案1760套/幼儿园中班数学教案合集/中班数学：图形朋友碰碰乐.doc',\n",
-       " './classifier/题库/数学/小学/其他/教辅资料库 小初高（合集）/学前教辅资料超级大汇总/幼儿园大班教案1862套/幼儿园大班数学教案合集182/运用插板进行的乘法运算.doc',\n",
-       " './classifier/题库/数学/小学/其他/教辅资料库 小初高（合集）/学前教辅资料超级大汇总/幼儿园大班教案1862套/幼儿园大班亲子活动合集28/幼儿园大班亲子科学游戏三则.doc',\n",
-       " './classifier/题库/数学/小学/其他/教辅资料库 小初高（合集）/学前教辅资料超级大汇总/幼儿园课程表模板/幼儿园小学课程表模板 (1).docx']"
+       "['./data/docx/题库/数学/小学/其他/教辅资料库 小初高（合集）/学前教辅资料超级大汇总/幼儿园中班教案1760套/幼儿园中班亲子活动合集/亲子游戏：钓鱼游戏.doc',\n",
+       " './data/docx/题库/数学/小学/其他/教辅资料库 小初高（合集）/学前教辅资料超级大汇总/幼儿园中班教案1760套/幼儿园中班数学教案合集/中班数学：图形朋友碰碰乐.doc',\n",
+       " './data/docx/题库/数学/小学/其他/教辅资料库 小初高（合集）/学前教辅资料超级大汇总/幼儿园大班教案1862套/幼儿园大班数学教案合集182/大班数学活动：蔬菜题库.doc',\n",
+       " './data/docx/题库/数学/小学/其他/教辅资料库 小初高（合集）/学前教辅资料超级大汇总/幼儿园大班教案1862套/幼儿园大班数学教案合集182/运用插板进行的乘法运算.doc',\n",
+       " './data/docx/题库/数学/小学/其他/教辅资料库 小初高（合集）/学前教辅资料超级大汇总/幼儿园大班教案1862套/幼儿园大班亲子活动合集28/幼儿园大班亲子科学游戏三则.doc',\n",
+       " './data/docx/题库/数学/小学/其他/教辅资料库 小初高（合集）/学前教辅资料超级大汇总/幼儿园课程表模板/幼儿园小学课程表模板 (1).docx']"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +251,7 @@
    "id": "2748fcac",
    "metadata": {},
    "source": [
-    "# 从文件名推测"
+    "# 从文件名(文件路径)推测"
    ]
   },
   {
@@ -248,7 +272,7 @@
     }
    ],
    "source": [
-    "# 从文件名推测题库文件夹中试卷数量\n",
+    "# 从文件路径推测题库文件夹中试卷数量\n",
     "specified_total, examination_all_file_path = query_file_total_by_keywords(all_file, {\"/题库\"}, {\"小品\", \"/学前教辅资料\"})\n",
     "specified_total"
    ]
@@ -271,7 +295,7 @@
     }
    ],
    "source": [
-    "# 从文件名推测题库中筛选出来的文件夹中试卷数量\n",
+    "# 从文件路径推测题库中筛选出来的文件夹中试卷数量\n",
     "positive_specified_total, examination_positive_file_path = query_file_total_by_keywords(positive_file, {\"/题库\"}, {\"小品\", \"/学前教辅资料\"})\n",
     "positive_specified_total"
    ]
@@ -1772,7 +1796,7 @@
    "execution_count": 211,
    "id": "ba0b05f9",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
